manifests/cilium-demo/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    route.openshift.io/termination: edge
  name: frontend
spec:
  rules:
  - host: cilium-demo.apps.cilium-demo.os4.sycloud.ch
    http:
      paths:
      - backend:
          service:
            name: cilium-demo-frontend
            port:
              name: service
        path: /
        pathType: Prefix
